<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="app_name">FITTY</string>
    <string name="rutinas">Rutinas</string>
    <string name="progreso">Progreso</string>
    <string name="home">Inicio</string>
    <string name="favoritas">Favoritas</string>
    <string name="search">Buscar</string>
    <string name="content_description_search">Buscador</string>

    <!-- Login y registro -->
    <string name="login_bienvenida">Ingresa a tu cuenta</string>
    <string name="signup_bienvenida">Crea tu cuenta</string>
    <string name="field_email">Email</string>
    <string name="field_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="divider_login_text">¿Aun no tienes cuenta?</string>
    <string name="divider_signup_text">¿Ya tienes una cuenta?</string>
    <string name="btn_to_signup">Crear cuenta</string>
    <string name="btn_to_login">Ingresar</string>
    <string name="field_full_name">Nombre completo</string>
    <string name="field_username">Nombre de usuario</string>
    <string name="btn_signup">Registrarme</string>
    <string name="login">Iniciar Sesión</string>
    <string name="field_nacimiento">Fecha de nacimiento</string>
    <string name="hint_gender">Género</string>
    <string name="female">Femenino</string>
    <string name="male">Masculino</string>
    <string name="other">Otro</string>
    <string name="verification_code_bienvenida">Ingresa el código de verificación que te enviamos por email</string>
    <string name="resend_code">¿Aún no te llego el código?</string>

    <string name="btn_validate_code">Validar</string>
    <string name="welcome">Bienvenido, %1$s!</string>
    <string name="field_fullname">Nombre Completo</string>
    <string name="error">Error %1$s (%2$d)</string>
    <string name="loading">cargando</string>
    <string name="genderError">Elige un género</string>


    <string name="btn_signup_next">Siguiente</string>
    <string name="btn_signup_back">Volver</string>
    <string name="logo_categoria">Logo Categoria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorita">Favorita</string>
    <string name="tiempo">Tiempo</string>
    <string name="btn_resend_code">REENVIAR</string>
    <string name="resend_code_toast">Mira tu email!</string>
    <string name="bad_code">Código incorrecto</string>
    <string name="error_feo">Intenta de nuevo más tarde</string>
    <string name="username_error">Usuario inválido</string>
    <string name="password_error">Contraseña inválida</string>
    <string name="error_email_taken">Lo sentimos, este email ya está registrado</string>
    <string name="error_username_taken">Lo sentimos, este nombre de usuario ya está registrado</string>
    <string name="field_empty_errror">No puede estar vacío</string>
    <string name="too_long">Máximo 30 caracteres</string>
    <string name="no_whitespaces">No puede haber espacios</string>
    <string name="wrong_email_format">Formato de email inválido</string>
    <string name="too_short_pass">Debe tener al menos 8 caracteres</string>
    <string name="iniciar_ahora">Iniciar Ahora</string>
    <string name="hint_order">Ordenar</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="profile">Perfil</string>

    <!-- Ejecucion de una rutina -->
    <string name="preparate">Prepárate</string>
    <string name="comenzando">Comenzando en %1$d</string>
    <string name="cancel_execution">¿Seguro desea cancelar la ejecución?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="titulo_ejecucion_terminada">Felicitaciones! Terminaste la rutina.</string>
    <string name="mensaje_ejecucion_terminada">Te tomó %1$d minutos y %2$d segundos.</string>
    <string name="ok">Ok</string>
    <string name="view_routine">Ver Rutina</string>
    <string name="signOut">Cerrar Sesión</string>
    <string name="rating_popup_title">¿Que te pareció la rutina?</string>
    <string name="puntuar">Puntuar</string>
    <string name="text_no_favorites">No has seleccionado ninguna rutina como favorita</string>
    <string name="no_has_ejecutado_ninguna_rutina">No has ejecutado ninguna rutina</string>
    <string name="best">Mejor Rating</string>
    <string name="recent">Más Recientes</string>
    <string name="leastDificulty">Menor Dificultad</string>
    <string name="moreDificulty">Mayor Dificultad</string>
    <string name="rutinas_destacadas">Rutinas destacadas</string>
    <string name="rutinas_recientes">Rutinas recientes</string>
    <string name="display_hora">%1$s:%2$s</string>
    <string name="ahora">Ahora:</string>
    <string name="luego">Luego:</string>
</resources>