<?xml version="1.0" encoding="utf-8"?>
<!--<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="prueba" type="String"/>
    </data>-->



    <LinearLayout
    android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/header"
    >

        <include
            layout="@layout/toolbar_no_login"
            android:id="@+id/navSignup" />

    <!--LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"!-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="parent"
        >

    <TextView
        android:id="@+id/viewSignupBienvenida"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/signup_bienvenida"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />
        <!--  android:background="@drawable/circle" !-->
        <TextView
            android:id="@+id/signupPageCounter"

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="1/2"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"

            />
    </LinearLayout>

    <!--TextView
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="1/2"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />
    </LinearLayout!-->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/linearLayoutSignupEtapa1">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtSignupFullName"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:boxBackgroundColor="@color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                android:hint="@string/field_full_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black" >
                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/txtSignupFullName"
                android:id="@+id/linearLayoutAuxSignup">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtBirthdate"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/transparent"
                    android:hint="@string/field_nacimiento"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:layout_marginEnd="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="date"
                        android:focusable="false"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtGender"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/transparent"
                    android:hint="@string/hint_gender"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:layout_marginStart="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="text"
                        android:focusable="false"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignupNext"
                app:icon="@drawable/ic_baseline_navigate_next_24"
                app:iconGravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/btn_signup_next"
                android:paddingVertical="15dp"/>
            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/divider_signup"
                layout="@layout/divider_text"
                android:layout_marginTop="60dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingVertical="15dp"
                android:text="@string/btn_to_login"
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="40dp"
                app:cornerRadius="14dp" />
        </LinearLayout>
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/linearLayoutSignupEtapa2"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtSignupUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:boxBackgroundColor="@color/transparent"
                android:hint="@string/field_username"
                android:textColor="@color/black"
                android:textColorHint="@color/black" >
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="text"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"


                    >
                    <TextView
                        android:id="@+id/count"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/30"/>
                </LinearLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtSignupEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:boxBackgroundColor="@color/transparent"
                android:hint="@string/field_email"
                android:textColor="@color/black"
                android:textColorHint="@color/black" >
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtSignupPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:endIconMode="password_toggle"
                app:boxBackgroundColor="@color/transparent"
                android:hint="@string/field_password"
                android:textColorHint="@color/black" >
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnSignupBack"
                    app:icon="@drawable/ic_baseline_arrow_back_ios_24"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_signup_back" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignup"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_signup"
                    android:paddingVertical="15dp"/>
            </LinearLayout>



        </LinearLayout>


</LinearLayout>
<!--</layout>-->
