<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar_no_login"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/navLogin" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewLoginBienvenida"
        android:text="@string/login_bienvenida"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/navLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:id="@+id/txtLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:boxBackgroundColor="@color/transparent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLoginBienvenida"
        android:hint="@string/field_username"
        android:textColor="@color/black"
        android:textColorHint="@color/black" >
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:id="@+id/txtLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:endIconMode="password_toggle"
        app:boxBackgroundColor="@color/transparent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginEmail"
        android:hint="@string/field_password"
        android:textColorHint="@color/black" >
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword"
        android:layout_marginTop="30dp"
        android:text="@string/btn_login"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingVertical="15dp"/>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/divider_login"
        layout="@layout/divider_text"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:layout_marginTop="30dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnToSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingVertical="15dp"
        android:text="@string/btn_to_signup"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="40dp"
        app:cornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@+id/divider_login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        tools:ignore="MissingConstraints">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/blue_1"
            android:indeterminateTintMode="src_atop" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>