<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar_no_login"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/navSignup" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewSignupBienvenida"
        android:text="@string/signup_bienvenida"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/navSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSignupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/transparent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSignupBienvenida"
        android:hint="@string/field_name"
        android:textColor="@color/black"
        android:textColorHint="@color/black" >
        <com.google.android.material.textfield.TextInputEditText
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/transparent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignupName"
        android:hint="@string/field_email"
        android:textColor="@color/black"
        android:textColorHint="@color/black" >
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:endIconMode="password_toggle"
        app:boxBackgroundColor="@color/transparent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignupEmail"
        android:hint="@string/field_password"
        android:textColorHint="@color/black" >
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtSignupPassword"
        android:layout_marginTop="30dp"
        android:text="@string/btn_signup"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingVertical="15dp"/>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/divider_signup"
        layout="@layout/divider_text"
        app:title="@{@string/divider_signup_text}"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup"
        android:layout_marginTop="60dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:paddingVertical="15dp"
        android:text="@string/btn_to_login"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="40dp"
        app:cornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@+id/divider_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>